--- a/src/app/layout/pages/wish-list/wish-list.component.html
+++ b/src/app/layout/pages/wish-list/wish-list.component.html
@@ -15,7 +15,7 @@
               <img [src]="wihslist?.imageCover" alt="">
             </div>
             
-            <div class="w-7/12 ms-4 flex justify-between">
+            <div class="w-10/12 md:ms-4 flex justify-between">
               <div>
                 <h2 class="font-extrabold">{{wihslist?.title}}</h2>
                 <span>Price : {{wihslist?.price}}</span>
