--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar class="sticky top-0 z-50"></app-navbar>
 <router-outlet></router-outlet>
 <ngx-spinner type="ball-scale-multiple"></ngx-spinner>
 <app-footer></app-footer>
