--- a/src/app/layout/additions/navbar/navbar.component.scss
+++ b/src/app/layout/additions/navbar/navbar.component.scss
@@ -1,4 +1,15 @@
 
+.nav
+{
+    position: sticky !important;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+}
+
 @media screen and (max-width: 960px){
     .items li a
     {
