--- a/src/app/layout/pages/products/products.component.html
+++ b/src/app/layout/pages/products/products.component.html
@@ -10,7 +10,7 @@
 <div class="w-10/12 mx-auto flex flex-wrap">
     @for (product of productList | filter: searchTerm; track $index) 
     {
-        <div class="md:w-1/4 cursor-pointer  p-2" [title]="product.title">
+        <div class="md:w-1/4 card cursor-pointer  p-2" [title]="product.title">
             <div class="product flex flex-col justify-between p-3">
                 <div [routerLink]="['/product-details',product._id]" >
                     <img [src]="product.imageCover" class="w-full" alt="">
