--- a/src/app/layout/pages/home/home.component.html
+++ b/src/app/layout/pages/home/home.component.html
@@ -2,14 +2,14 @@
 
 <div class="w-10/12 mx-auto py-2 flex">
 
-    <div class="w-3/4 main-img">
+    <div class="w-3/4 m-img main-img">
         <owl-carousel-o [options]="customOptions">
             <ng-template carouselSlide><img src="./assets/images/main-slider-1.jpeg" class="w-full" alt=""></ng-template>  
             <ng-template carouselSlide><img src="./assets/images/main-slider-2.jpeg" class="w-full" alt=""></ng-template>  
             <ng-template carouselSlide><img src="./assets/images/main-slider-3.jpeg" class="w-full" alt=""></ng-template>  
         </owl-carousel-o>
     </div>
-    <div class="w-1/4 second-img">
+    <div class="w-1/4 s-img second-img">
         <img src="./assets/images/main-slider-2.jpeg" class="w-full" alt="">
         <img src="./assets/images/main-slider-3.jpeg" class="w-full" alt="">
     </div>
