--- a/src/app/layout/pages/home/home.component.scss
+++ b/src/app/layout/pages/home/home.component.scss
@@ -6,3 +6,15 @@
 {
     height: 200px;
 }
+@media screen and (max-width: 960px) {
+   .m-img
+   {
+        display: none;
+   }
+   .s-img
+   {
+        width: 100%;
+        margin-bottom: 20px;
+   }
+      
+}
