--- a/src/app/layout/pages/product-details/product-details.component.html
+++ b/src/app/layout/pages/product-details/product-details.component.html
@@ -1,5 +1,5 @@
-<div class="w-3/4 mx-auto flex flex-wrap items-center">
-    <div class="w-1/4 p-5">
+<div class="w-3/4 mx-auto justify-center flex flex-wrap items-center">
+    <div class="w-1/4 imgs p-5">
         <div>
             <owl-carousel-o [options]="customOptions">
 
