--- a/src/app/layout/pages/products/products.component.scss
+++ b/src/app/layout/pages/products/products.component.scss
@@ -6,6 +6,12 @@
 {
     height: 200px;
 }
+.btn
+{
+  width: 100%;
+  margin: 0;
+  margin-top: 10px;
+}
 
 @media screen and (max-width: 960px) {
     .card {
