--- a/src/app/layout/pages/product-details/product-details.component.html
+++ b/src/app/layout/pages/product-details/product-details.component.html
@@ -24,6 +24,6 @@
                 <i class="fa-solid fa-star rating-color"></i>
             </span>
         </div>
-        <button class="btn-main w-full mt-2">Add to Product</button>
+        <button class="btn-main w-full mt-2" (click)="addProduct()">Add to Cart</button>
     </div>
 </div>
